force-app/main/default/objects/Account/fields/Insurance_period__c.field-meta.xml
<CustomField>
    <fullName>Insurance_period__c</fullName>
    <label>Insurance period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10 years</fullName>
            </value>
            <value>
                <fullName>20 years</fullName>
            </value>
            <value>
                <fullName>30 years</fullName>
            </value>
            <value>
                <fullName>3 years</fullName>
            </value>
            <value>
                <fullName>2 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>