force-app/main/default/objects/Account/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <formula>TODAY() + (VALUE(TEXT( Insurance_period__c )))/ 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>