force-app/main/default/objects/Account/fields/OTP_has_expired__c.field-meta.xml
<CustomField>
    <fullName>OTP_has_expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OTP has expired</label>
    <type>Checkbox</type>
</CustomField>