force-app/main/default/objects/Account/fields/OTP_verified__c.field-meta.xml
<CustomField>
    <fullName>OTP_verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OTP verified</label>
    <type>Checkbox</type>
</CustomField>