force-app/main/default/objects/Account/fields/OTP_was_wrong__c.field-meta.xml
<CustomField>
    <fullName>OTP_was_wrong__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OTP was wrong</label>
    <type>Checkbox</type>
</CustomField>