force-app/main/default/objects/Account/fields/Recived_OTP__c.field-meta.xml
<CustomField>
    <fullName>Recived_OTP__c</fullName>
    <label>Recived OTP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>