force-app/main/default/objects/Account/fields/siexteen_minutes__c.field-meta.xml
<CustomField>
    <fullName>siexteen_minutes__c</fullName>
    <formula>IF( CreatedDate &gt;   NOW() -(1/24) , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>siexteen minutes</label>
    <type>Checkbox</type>
</CustomField>