force-app/main/default/objects/Account/fields/Total_Ammount_1__c.field-meta.xml
<CustomField>
    <fullName>Total_Ammount_1__c</fullName>
    <label>Total Ammount 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>