force-app/main/default/objects/Account/validationRules/Prevent_Account_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Account_Record</fullName>
    <active>false</active>
    <errorConditionFormula>or( ISPICKVAL( Rating , &apos;hot&apos;) , ISPICKVAL( Rating , &apos;warm&apos;) )</errorConditionFormula>
    <errorMessage>check the rating of hot and warm</errorMessage>
</ValidationRule>