force-app/main/default/objects/Account/validationRules/Prevent_account_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_account_type</fullName>
    <active>false</active>
    <errorConditionFormula>AND(or( ISPICKVAL( Type , &apos;prospect&apos;) , ISPICKVAL( Type , &apos;Customer - Direct&apos;) ),
or( ISPICKVAL( Rating , &apos;hot&apos;) , ISPICKVAL( Rating , &apos;warm&apos;) ),
 Name = &apos;A&apos;)</errorConditionFormula>
    <errorMessage>see fields</errorMessage>
</ValidationRule>