force-app/main/default/objects/Account/validationRules/prevent_account_type_is.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_account_type_is</fullName>
    <active>false</active>
    <errorConditionFormula>AND(or(  ISPICKVAL( Type , &apos;prospect&apos;) , ISPICKVAL( Type , &apos;customer - direct&apos;) ),
 ISPICKVAL( Rating , &apos;hot&apos;) ,
 ISPICKVAL( SLA__c , &apos;gold&apos;) )</errorConditionFormula>
    <errorMessage>locha</errorMessage>
</ValidationRule>