force-app/main/default/objects/Account/validationRules/Prevent_Data.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Data</fullName>
    <active>false</active>
    <errorConditionFormula>AND(or( ISPICKVAL( Type , &apos;Prospect&apos;) , ISPICKVAL( Type , &apos;customer - direct&apos;) ),
 ISPICKVAL( Rating , &apos;hot&apos;) ,
 ISPICKVAL(  SLA__c , &apos;gold&apos;) 
)</errorConditionFormula>
    <errorMessage>locha</errorMessage>
</ValidationRule>