force-app/main/default/objects/Account/validationRules/When_an_Type_is_prospect_then_rating_sho.validationRule-meta.xml
<ValidationRule>
    <fullName>When_an_Type_is_prospect_then_rating_sho</fullName>
    <active>true</active>
    <errorConditionFormula>AND((ISPICKVAL( Type , &apos;Prospect&apos;)) ,( ISPICKVAL( Rating , &apos;&apos;) ) )</errorConditionFormula>
    <errorMessage>When an Type is prospect then rating should me mandatory</errorMessage>
</ValidationRule>